Rearrange docs structure and rewrite some pages

--- a/apps/front/src/app/landing/landing.component.html
+++ b/apps/front/src/app/landing/landing.component.html
@@ -67,7 +67,7 @@
     <div class="row justify-content-center align-items-center">
       <div class="col col-xl-5 mt-5">
         <h2 class="display-3 fw-bold text-white mb-5">The way studying is meant to be</h2>
-        <p class="fs-4 text-white mt-5">Scholarsome is your all-encompassing learning platform. Create study sets, import data from other platforms, take generated practice quizzes to test your knowledge, and much more. It's accessible from any device in a centralized, easy-to-use, web-based location.</p>
+        <p class="fs-4 text-white mt-5">Scholarsome is your all-encompassing studying platform. Create study sets, import data from other platforms, take generated practice quizzes to test your knowledge, and much more. It's accessible from any device in a centralized, easy-to-use, web-based location.</p>
       </div>
       <div class="col col-xl-6 col-md-6 col-12">
         <div class="d-flex justify-content-center">
