Add media exporting, csv importing, rearrange study set page

--- a/apps/front/src/styles.scss
+++ b/apps/front/src/styles.scss
@@ -18,7 +18,7 @@ $enable-negative-margins: true;
 @import '~quill/dist/quill.snow.css';
 
 body {
-  background-color: white;
+  background-color: #f8fafb;
 }
 
 .grecaptcha-badge {
