--- a/apps/front/src/app/study-set/study-set.component.html
+++ b/apps/front/src/app/study-set/study-set.component.html
@@ -17,17 +17,19 @@
       <a [routerLink]="['/study-set', setId, 'quiz']"><button type="button" class="btn btn-lg btn-light bg-white w-100 my-2 shadow-sm"><fa-icon [icon]="['far', 'pen-to-square']"></fa-icon> Quiz</button></a>
     </div>
   </div>
-  <div class="mt-4 d-flex justify-content-between" *ngIf="set">
+  <div class="mt-4 d-flex justify-content-between align-items-center" *ngIf="set">
     <div class="d-flex align-items-center">
       <a [routerLink]="['/profile', set.authorId]"><button type="button" class="btn btn-light bg-white shadow-sm"><fa-icon [icon]="['far', 'user']"></fa-icon> Created by <span class="fw-bold">{{author}}</span></button></a>
       <fa-icon *ngIf="set.private" [icon]="['far', 'eye-slash']" class="fs-5 ms-3"></fa-icon>
     </div>
-    <p class="text-secondary">{{set.description}}</p>
+    <p class="fs-5 fw-semibold mt-3">{{this.cards.length}} term{{this.cards.length > 1 ? 's' : ''}} in this set</p>
+  </div>
+  <div>
+    <p class="text-secondary text-wrap text-break">{{set.description}}</p>
   </div>
   <hr>
   <div class="container-fluid">
-    <div class="d-flex justify-content-between align-items-center">
-      <h5>{{this.cards.length}} term{{this.cards.length > 1 ? 's' : ''}} in this set</h5>
+    <div class="d-flex justify-content-end align-items-center">
       <div>
         <div class="btn-group me-1" [hidden]="isEditing">
           <button type="button" class="btn btn-outline-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
