--- a/apps/front/src/app/landing/landing.component.html
+++ b/apps/front/src/app/landing/landing.component.html
@@ -26,144 +26,146 @@
   </div>
 </nav>
 
-<div class="main-screen d-flex align-items-center min-vh-100">
-  <div class="container-fluid text-center main-screen-content">
-    <div class="row justify-content-center">
-      <div class="col-lg-8">
-        <h1 class="display-2 fw-bold">Interactive and open source flashcard studying <span class="text-primary">for the masses</span></h1>
+<div class="container-fluid p-0 bg-white">
+  <div class="main-screen d-flex align-items-center min-vh-100">
+    <div class="container-fluid text-center main-screen-content">
+      <div class="row justify-content-center">
+        <div class="col-lg-8">
+          <h1 class="display-2 fw-bold">Interactive and open source flashcard studying <span class="text-primary">for the masses</span></h1>
+        </div>
       </div>
-    </div>
-    <div class="row justify-content-center">
-      <div class="col-lg-6">
-        <h1 class="display-6">Shed the shackles of paying a monthly subscription for your learning. Switch to the better alternative.</h1>
+      <div class="row justify-content-center">
+        <div class="col-lg-6">
+          <h1 class="display-6">Shed the shackles of paying a monthly subscription for your learning. Switch to the better alternative.</h1>
+        </div>
       </div>
-    </div>
-    <div class="row justify-content-center mt-3">
-      <div class="col-lg-6">
-        <button class="btn btn-lg fs-4 btn-primary" (click)="this.modalService.modal.next('register-open')" aria-label="Sign up">Sign up for free</button>
+      <div class="row justify-content-center mt-3">
+        <div class="col-lg-6">
+          <button class="btn btn-lg fs-4 btn-primary" (click)="this.modalService.modal.next('register-open')" aria-label="Sign up">Sign up for free</button>
+        </div>
       </div>
-    </div>
-    <div class="showcase-row row justify-content-center">
-      <div class="col-lg-9 col-xl-6 col-sm-10 col-">
-        <img class="showcase-image" src="assets/landing/showcase.webp">
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="section-1 d-flex align-items-center as-seen-on">
-  <div class="container-fluid text-center">
-    <div class="row justify-content-center">
-      <div class="col-sm-4 col-md-10 col-lg-10 col-xl-5">
-        <p class="fs-6">AS SEEN ON</p>
-        <img src="assets/landing/hackernews.webp" class="w-25">
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="section-2">
-  <div class="container-fluid section-2-container">
-    <div class="row justify-content-center align-items-center">
-      <div class="col col-xl-5 mt-5">
-        <h2 class="display-3 fw-bold text-white mb-5">The way studying is meant to be</h2>
-        <p class="fs-4 text-white mt-5">Scholarsome is your all-encompassing studying platform. Create study sets, import data from other platforms, take generated practice quizzes to test your knowledge, and much more. It's accessible from any device in a centralized, easy-to-use, web-based location.</p>
-      </div>
-      <div class="col col-xl-6 col-md-6 col-12">
-        <div class="d-flex justify-content-center">
-          <img src="assets/landing/section2_laptop.webp" class="section-2-laptop">
+      <div class="showcase-row row justify-content-center">
+        <div class="col-lg-9 col-xl-6 col-sm-10 col-">
+          <img class="showcase-image" src="assets/landing/showcase.webp">
         </div>
       </div>
     </div>
   </div>
-</div>
 
-<div class="section-3">
-  <div class="container-fluid section-3-container">
-    <div class="row justify-content-center">
-      <div class="col-xl-5 text-center">
-        <h2 class="display-3 fw-bold text-primary mt-5">Make your studying easy</h2>
-        <p class="fs-3">With Scholarsome's tools at your disposal, you can go back to focusing on what matters: learning your sets efficiently.</p>
-      </div>
-    </div>
-    <div class="section-3-features">
-      <div class="row justify-content-center align-items-center mt-5">
-        <div class="col-lg-7 col-sm-12 text-sm-center text-lg-start text-xl-start">
-          <img src="assets/landing/section-3-feature-1.png" class="section-3-feature-image shadow-sm">
-        </div>
-        <div class="col-lg-5">
-          <h3 class="display-5 fw-bold mt-3 mt-xl-0 mt-lg-0">Create randomized practice quizzes</h3>
-          <p class="fs-5">Using the cards created in your sets, you can generate randomized quizzes to practice. Choose from a mixture of multiple choice, written, and true or false questions, depending on what the content of your set is best suited to.</p>
-        </div>
-      </div>
-      <div class="row justify-content-center align-items-center mt-4">
-        <div class="col-lg-5 order-sm-1 order-1 order-xl-0 order-lg-0">
-          <h3 class="display-5 fw-bold mt-3 mt-xl-0 mt-lg-0">Import and export to other platforms with ease</h3>
-          <p class="fs-5">Sets can be easily imported into Scholarsome from a variety of other platforms - Quizlet, Anki, and importing from a CSV file. Plus, Scholarsome doesn't lock your data down. You're free to easily export your set data to those same platforms.</p>
-        </div>
-        <div class="col-lg-7 col-sm-12 text-lg-end text-xl-end text-sm-center order-0 order-xl-1 order-lg-1">
-          <img src="assets/landing/section-3-feature-2.png" class="section-3-feature-image shadow-sm">
-        </div>
-      </div>
-      <div class="row justify-content-center align-items-center mt-4">
-        <div class="col-lg-7 col-sm-12 text-sm-center text-lg-start text-xl-start">
-          <img src="assets/landing/section-3-feature-3.png" class="section-3-feature-image shadow-sm">
-        </div>
-        <div class="col-lg-5">
-          <h3 class="display-5 fw-bold mt-3 mt-xl-0 mt-lg-0">Use flashcards to enhance your memory</h3>
-          <p class="fs-5">The cards created in your sets can be used in a familiar interface to study in the same way that you would with physical flashcards. Flip cards over, swap back and forth between them, and circle back to ones that you missed — all with convenient keybinds for long study sessions.</p>
-        </div>
-      </div>
-      <div class="row justify-content-center align-items-center mt-4">
-        <div class="col-lg-5 order-sm-1 order-1 order-xl-0 order-lg-0">
-          <h3 class="display-5 fw-bold mt-3 mt-xl-0 mt-lg-0">Feature-rich card editor</h3>
-          <p class="fs-5">Each side of a card can be customized to your heart's content. Add multiple images, change the formatting of text, use code blocks, and much more.</p>
-        </div>
-        <div class="col-lg-7 col-sm-12 text-lg-end text-xl-end text-sm-center order-0 order-xl-1 order-lg-1">
-          <img src="assets/landing/section-3-feature-4.png" class="section-3-feature-image shadow-sm">
+  <div class="section-1 d-flex align-items-center as-seen-on">
+    <div class="container-fluid text-center">
+      <div class="row justify-content-center">
+        <div class="col-sm-4 col-md-10 col-lg-10 col-xl-5">
+          <p class="fs-6">AS SEEN ON</p>
+          <img src="assets/landing/hackernews.webp" class="w-25">
         </div>
       </div>
     </div>
   </div>
-</div>
 
-<div class="section-4">
-  <div class="container-fluid">
-    <div class="section-4-content pt-5">
-      <div class="row justify-content-center text-center pt-5">
-        <h2 class="display-3 fw-bold">And even more, coming soon</h2>
-      </div>
-      <div class="row row-cols-1 row-cols-md-3 justify-content-center mt-4 gap-3">
-        <div class="col col-md-3 bg-white rounded shadow-sm py-3">
-          <h4 class="fs-2 fw-semibold">LaTex Support</h4>
-          <p class="fs-5">Use LaTex code to create beautiful mathematical expressions in your cards.</p>
+  <div class="section-2">
+    <div class="container-fluid section-2-container">
+      <div class="row justify-content-center align-items-center">
+        <div class="col col-xl-5 mt-5">
+          <h2 class="display-3 fw-bold text-white mb-5">The way studying is meant to be</h2>
+          <p class="fs-4 text-white mt-5">Scholarsome is your all-encompassing studying platform. Create study sets, import data from other platforms, take generated practice quizzes to test your knowledge, and much more. It's accessible from any device in a centralized, easy-to-use, web-based location.</p>
         </div>
-        <div class="col col-md-3 bg-white rounded shadow-sm py-3">
-          <h4 class="fs-2 fw-semibold">Spaced Repetition</h4>
-          <p class="fs-5">Learn large sets over time by using psychology-proven methods to improve learning efficiency.</p>
-        </div>
-        <div class="col col-md-3 bg-white rounded shadow-sm py-3">
-          <h4 class="fs-2 fw-semibold">Study Games</h4>
-          <p class="fs-5">Play games that are both fun and test your memory of your sets.</p>
+        <div class="col col-xl-6 col-md-6 col-12">
+          <div class="d-flex justify-content-center">
+            <img src="assets/landing/section2_laptop.webp" class="section-2-laptop">
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
 
-<div class="section-5 my-xl-5">
-  <div class="d-flex justify-content-center mt">
-    <div class="section-5-rectangle round text-center pb-3">
-      <h2 class="text-white display-3 fw-bold mt-3">We're open-source, too</h2>
-      <p class="fs-4 text-white mt-3 mx-5">Scholarsome is proud to be released under the AGPL-3.0 license. With the help of our detailed documentation, you can easily get a fully-functional local instance running using Docker.</p>
-      <div class="d-flex justify-content-center align-items-center gap-3 mt-4">
-        <a [href]="document.location.href + 'handbook'" target="_blank">
-          <button type="button" class="btn btn-light btn-lg bg-white">Read the docs</button>
-        </a>
-        <a href="https://github.com/hwgilbert16/scholarsome" target="_blank" class="pt-2 text-white text-decoration-none d-flex">
-          <p class="text-white fs-6">Star us on GitHub</p>
-          <fa-icon [icon]="faArrowRight" class="ms-1"></fa-icon>
-        </a>
+  <div class="section-3">
+    <div class="container-fluid section-3-container">
+      <div class="row justify-content-center">
+        <div class="col-xl-5 text-center">
+          <h2 class="display-3 fw-bold text-primary mt-5">Make your studying easy</h2>
+          <p class="fs-3">With Scholarsome's tools at your disposal, you can go back to focusing on what matters: learning your sets efficiently.</p>
+        </div>
+      </div>
+      <div class="section-3-features">
+        <div class="row justify-content-center align-items-center mt-5">
+          <div class="col-lg-7 col-sm-12 text-sm-center text-lg-start text-xl-start">
+            <img src="assets/landing/section-3-feature-1.png" class="section-3-feature-image shadow-sm">
+          </div>
+          <div class="col-lg-5">
+            <h3 class="display-5 fw-bold mt-3 mt-xl-0 mt-lg-0">Create randomized practice quizzes</h3>
+            <p class="fs-5">Using the cards created in your sets, you can generate randomized quizzes to practice. Choose from a mixture of multiple choice, written, and true or false questions, depending on what the content of your set is best suited to.</p>
+          </div>
+        </div>
+        <div class="row justify-content-center align-items-center mt-4">
+          <div class="col-lg-5 order-sm-1 order-1 order-xl-0 order-lg-0">
+            <h3 class="display-5 fw-bold mt-3 mt-xl-0 mt-lg-0">Import and export to other platforms with ease</h3>
+            <p class="fs-5">Sets can be easily imported into Scholarsome from a variety of other platforms - Quizlet, Anki, and importing from a CSV file. Plus, Scholarsome doesn't lock your data down. You're free to easily export your set data to those same platforms.</p>
+          </div>
+          <div class="col-lg-7 col-sm-12 text-lg-end text-xl-end text-sm-center order-0 order-xl-1 order-lg-1">
+            <img src="assets/landing/section-3-feature-2.png" class="section-3-feature-image shadow-sm">
+          </div>
+        </div>
+        <div class="row justify-content-center align-items-center mt-4">
+          <div class="col-lg-7 col-sm-12 text-sm-center text-lg-start text-xl-start">
+            <img src="assets/landing/section-3-feature-3.png" class="section-3-feature-image shadow-sm">
+          </div>
+          <div class="col-lg-5">
+            <h3 class="display-5 fw-bold mt-3 mt-xl-0 mt-lg-0">Use flashcards to enhance your memory</h3>
+            <p class="fs-5">The cards created in your sets can be used in a familiar interface to study in the same way that you would with physical flashcards. Flip cards over, swap back and forth between them, and circle back to ones that you missed — all with convenient keybinds for long study sessions.</p>
+          </div>
+        </div>
+        <div class="row justify-content-center align-items-center mt-4">
+          <div class="col-lg-5 order-sm-1 order-1 order-xl-0 order-lg-0">
+            <h3 class="display-5 fw-bold mt-3 mt-xl-0 mt-lg-0">Feature-rich card editor</h3>
+            <p class="fs-5">Each side of a card can be customized to your heart's content. Add multiple images, change the formatting of text, use code blocks, and much more.</p>
+          </div>
+          <div class="col-lg-7 col-sm-12 text-lg-end text-xl-end text-sm-center order-0 order-xl-1 order-lg-1">
+            <img src="assets/landing/section-3-feature-4.png" class="section-3-feature-image shadow-sm">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="section-4">
+    <div class="container-fluid">
+      <div class="section-4-content pt-5">
+        <div class="row justify-content-center text-center pt-5">
+          <h2 class="display-3 fw-bold">And even more, coming soon</h2>
+        </div>
+        <div class="row row-cols-1 row-cols-md-3 justify-content-center mt-4 gap-3">
+          <div class="col col-md-3 bg-white rounded shadow-sm py-3">
+            <h4 class="fs-2 fw-semibold">LaTex Support</h4>
+            <p class="fs-5">Use LaTex code to create beautiful mathematical expressions in your cards.</p>
+          </div>
+          <div class="col col-md-3 bg-white rounded shadow-sm py-3">
+            <h4 class="fs-2 fw-semibold">Spaced Repetition</h4>
+            <p class="fs-5">Learn large sets over time by using psychology-proven methods to improve learning efficiency.</p>
+          </div>
+          <div class="col col-md-3 bg-white rounded shadow-sm py-3">
+            <h4 class="fs-2 fw-semibold">Study Games</h4>
+            <p class="fs-5">Play games that are both fun and test your memory of your sets.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="section-5 my-xl-5">
+    <div class="d-flex justify-content-center mt">
+      <div class="section-5-rectangle round text-center pb-3">
+        <h2 class="text-white display-3 fw-bold mt-3">We're open-source, too</h2>
+        <p class="fs-4 text-white mt-3 mx-5">Scholarsome is proud to be released under the AGPL-3.0 license. With the help of our detailed documentation, you can easily get a fully-functional local instance running using Docker.</p>
+        <div class="d-flex justify-content-center align-items-center gap-3 mt-4">
+          <a [href]="document.location.href + 'handbook'" target="_blank">
+            <button type="button" class="btn btn-light btn-lg bg-white">Read the docs</button>
+          </a>
+          <a href="https://github.com/hwgilbert16/scholarsome" target="_blank" class="pt-2 text-white text-decoration-none d-flex">
+            <p class="text-white fs-6">Star us on GitHub</p>
+            <fa-icon [icon]="faArrowRight" class="ms-1"></fa-icon>
+          </a>
+        </div>
       </div>
     </div>
   </div>
