--- a/apps/front/src/app/study-set/study-set.component.scss
+++ b/apps/front/src/app/study-set/study-set.component.scss
@@ -20,6 +20,14 @@
   min-width: 20vw;
 }
 
+.csv-dropdown {
+  margin-left: 0.1rem;
+}
+
+.csv-dropdown-text {
+  margin: 0.44rem;
+}
+
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
   .set-view {
     width: 100%;
