--- a/apps/front/src/app/header/quizlet-import-modal/quizlet-import-modal.component.html
+++ b/apps/front/src/app/header/quizlet-import-modal/quizlet-import-modal.component.html
@@ -10,9 +10,9 @@
         <fa-icon [icon]="faQ" class="quizlet-logo quizlet-color"></fa-icon>
         <div class="fs-3 mb-2">
           Import a study set from Quizlet
-          <a href="/handbook/usage/creating-sets#importing-from-quizlet" target="_blank" class="text-decoration-none help-button"><fa-icon [icon]="faQuestionCircle" class="fs-5"></fa-icon></a>
+          <a href="/handbook/usage/sets/importing-sets/#importing-from-quizlet" target="_blank" class="text-decoration-none help-button"><fa-icon [icon]="faQuestionCircle" class="fs-5"></fa-icon></a>
         </div>
-        <div class="fs-6 text-secondary">If you've created a Quizlet set, you can import it to Scholarsome. Click <a href="http://localhost:4200/handbook/usage/creating-sets/#importing-from-quizlet" target="_blank">here</a> to view how to.</div>
+        <div class="fs-6 text-secondary">If you've created a Quizlet set, you can import it to Scholarsome. Click <a href="/handbook/usage/sets/importing-sets/#importing-from-quizlet" target="_blank">here</a> to view how to.</div>
       </div>
     </div>
     <hr>
