Add global card input sanitization

--- a/apps/front/src/app/header/csv-import-modal/csv-import-modal.component.html
+++ b/apps/front/src/app/header/csv-import-modal/csv-import-modal.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="col">
       <div class="row text-center justify-content-center">
-        <fa-icon [icon]="faFileCsv" class="csv-logo quizlet-color"></fa-icon>
+        <fa-icon [icon]="faFileCsv" class="csv-logo"></fa-icon>
         <div class="fs-3 mb-2">
           Import a study set from a CSV file
           <a href="/handbook/usage/sets/importing-sets/#importing-from-a-csv-file" target="_blank" class="text-decoration-none help-button"><fa-icon [icon]="faQuestionCircle" class="fs-5"></fa-icon></a>
