Move export/import service functions to new service, fix img attribute html sanitization, updated readme

--- a/apps/front/src/app/study-set/study-set-quiz/study-set-quiz-question/study-set-quiz-question.component.html
+++ b/apps/front/src/app/study-set/study-set-quiz/study-set-quiz-question/study-set-quiz-question.component.html
@@ -1,4 +1,4 @@
-<div [formGroup]="parentForm">
+<div [formGroup]="parentForm" class="bg-white">
   <div [formGroupName]="'q' + question.index" class="d-flex d-flex mt-5 shadow rounded quiz-question align-items-center">
     <p class="text-secondary fs-5 ms-4 mt-3">#{{question.index + 1}}</p>
     <div class="mx-4 container-fluid mt-3 mb-4">
