Add new homepage images, sanitization for media userId param, separate avatar endpoint for self

--- a/apps/front/src/app/landing/landing.component.html
+++ b/apps/front/src/app/landing/landing.component.html
@@ -90,7 +90,7 @@
       <div class="section-3-features">
         <div class="row justify-content-center align-items-center mt-5">
           <div class="col-lg-7 col-sm-12 text-sm-center text-lg-start text-xl-start">
-            <img src="assets/landing/section-3-feature-1.png" class="section-3-feature-image shadow-sm">
+            <img src="assets/landing/section-3-feature-1.webp" class="section-3-feature-image shadow-sm">
           </div>
           <div class="col-lg-5">
             <h3 class="display-5 fw-bold mt-3 mt-xl-0 mt-lg-0">Create randomized practice quizzes</h3>
@@ -103,12 +103,12 @@
             <p class="fs-5">Sets can be easily imported into Scholarsome from a variety of other platforms - Quizlet, Anki, and importing from a CSV file. Plus, Scholarsome doesn't lock your data down. You're free to easily export your set data to those same platforms.</p>
           </div>
           <div class="col-lg-7 col-sm-12 text-lg-end text-xl-end text-sm-center order-0 order-xl-1 order-lg-1">
-            <img src="assets/landing/section-3-feature-2.png" class="section-3-feature-image shadow-sm">
+            <img src="assets/landing/section-3-feature-2.webp" class="section-3-feature-image shadow-sm">
           </div>
         </div>
         <div class="row justify-content-center align-items-center mt-4">
           <div class="col-lg-7 col-sm-12 text-sm-center text-lg-start text-xl-start">
-            <img src="assets/landing/section-3-feature-3.png" class="section-3-feature-image shadow-sm">
+            <img src="assets/landing/section-3-feature-3.webp" class="section-3-feature-image shadow-sm">
           </div>
           <div class="col-lg-5">
             <h3 class="display-5 fw-bold mt-3 mt-xl-0 mt-lg-0">Use flashcards to enhance your memory</h3>
@@ -121,7 +121,7 @@
             <p class="fs-5">Each side of a card can be customized to your heart's content. Add multiple images, change the formatting of text, use code blocks, and much more.</p>
           </div>
           <div class="col-lg-7 col-sm-12 text-lg-end text-xl-end text-sm-center order-0 order-xl-1 order-lg-1">
-            <img src="assets/landing/section-3-feature-4.png" class="section-3-feature-image shadow-sm">
+            <img src="assets/landing/section-3-feature-4.webp" class="section-3-feature-image shadow-sm">
           </div>
         </div>
       </div>
