Fix landing padding on xl screens

--- a/apps/front/src/app/landing/landing.component.html
+++ b/apps/front/src/app/landing/landing.component.html
@@ -152,7 +152,7 @@
     </div>
   </div>
 
-  <div class="section-5 my-xl-5">
+  <div class="section-5 mt-xl-5 mb-xl-2">
     <div class="d-flex justify-content-center mt">
       <div class="section-5-rectangle round text-center pb-3">
         <h2 class="text-white display-3 fw-bold mt-3">We're open-source, too</h2>
