Move getUserInfo to AuthService, add apiKey option to getUserInfo, add ApiKey routes and table

--- a/apps/front/src/app/header/resend-email/resend-email.component.html
+++ b/apps/front/src/app/header/resend-email/resend-email.component.html
@@ -1,5 +1,5 @@
 <div
-  class="p-2 alert alert-warning d-flex align-items-center justify-content-center"
+  class="p-2 my-n1 alert alert-warning d-flex align-items-center justify-content-center"
   role="alert"
 >
   <div class="mx-2">
