--- a/apps/front/src/app/landing/landing.component.html
+++ b/apps/front/src/app/landing/landing.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar fixed-top navbar-expand-xxl bg-white">
+<nav class="navbar sticky-top navbar-expand-xxl bg-white">
   <div class="container-fluid navbar-container">
     <a class="navbar-brand" href="#">
       <img src="assets/header/scholarsome-logo-purple-lowercase.svg" width="80%" height="80%" alt="Logo" class="d-inline-block align-text-top">
@@ -28,7 +28,7 @@
 
 <div class="container-fluid p-0 bg-white">
   <div class="main-screen d-flex align-items-center min-vh-100">
-    <div class="container-fluid text-center main-screen-content">
+    <div class="container-fluid text-center">
       <div class="row justify-content-center">
         <div class="col-lg-8">
           <h1 class="display-2 fw-bold">Interactive and open source flashcard studying <span class="text-primary">for the masses</span></h1>
