--- a/apps/front/src/app/settings/avatar-settings/avatar-settings.component.html
+++ b/apps/front/src/app/settings/avatar-settings/avatar-settings.component.html
@@ -2,10 +2,9 @@
   <img class="rounded-circle shadow-sm" alt="Current profile picture" [src]="existingAvatarUrl">
 </div>
 
-<form class="mt-3 py-5" (ngSubmit)="submit()" ngNativeValidate>
+<form class="py-5" (ngSubmit)="submit()" ngNativeValidate>
   <div class="mb-3">
     <input type="file" accept="image/png,image/jpeg" class="form-control" name="file" (change)="onFileUpload($event)" [disabled]="changeClicked" ngModel required>
-    <div class="form-text">Reload the page to see your new profile picture after changing it.</div>
     <div *ngIf="changeError" class="form-text text-danger">Something went wrong. Try again, or look at the developer console for more information.</div>
   </div>
   <div class="d-flex justify-content-between">
