--- a/apps/front/src/app/settings/settings.component.html
+++ b/apps/front/src/app/settings/settings.component.html
@@ -4,11 +4,11 @@
       <div class="d-flex justify-content-center align-items-center py-3 col-md-3 bg-white shadow-sm">
         <div class="text-center">
           <fa-icon [icon]="faImage" class="display-3"></fa-icon>
-          <h1>Profile Picture</h1>
+          <h1>Avatar</h1>
         </div>
       </div>
       <div class="col-md-8 bg-white shadow-sm p-3">
-        <scholarsome-profile-picture-settings></scholarsome-profile-picture-settings>
+        <scholarsome-avatar-settings></scholarsome-avatar-settings>
       </div>
     </div>
   </div>
