Add password reset routes and settings component

--- a/apps/front/src/app/settings/settings.component.html
+++ b/apps/front/src/app/settings/settings.component.html
@@ -11,5 +11,16 @@
         <scholarsome-avatar-settings></scholarsome-avatar-settings>
       </div>
     </div>
+    <div class="row mt-5 gap-md-3 gap-2">
+      <div class="d-flex justify-content-center align-items-center py-3 col-md-3 bg-white shadow-sm">
+        <div class="text-center">
+          <fa-icon [icon]="faKey" class="display-3"></fa-icon>
+          <h1>Change Password</h1>
+        </div>
+      </div>
+      <div class="col-md-8 bg-white shadow-sm p-3">
+        <scholarsome-change-password-settings></scholarsome-change-password-settings>
+      </div>
+    </div>
   </div>
 </div>
