--- a/apps/front/src/styles.scss
+++ b/apps/front/src/styles.scss
@@ -16,6 +16,7 @@ $enable-negative-margins: true;
 
 @import '~quill/dist/quill.core.css';
 @import '~quill/dist/quill.snow.css';
+@import '~katex/dist/katex.min.css';
 
 body {
   background-color: #f8fafb;
