--- a/apps/front/src/app/shared/card/card.component.html
+++ b/apps/front/src/app/shared/card/card.component.html
@@ -12,6 +12,7 @@
       </div>
     </div>
     <div class="container-fluid" #inputsContainer>
+      <span class="text-secondary" *ngIf="actualTerm.length === 0 && actualDefinition.length === 0">Click <span class="text-decoration-underline edit-text" (click)="openEditModal()">here</span> to edit this card.</span>
       <div class="row">
         <div class="col border-end fs-5 w-50 h-100 overflow-hidden" [innerHTML]="sanitizer.bypassSecurityTrustHtml(actualTerm)" #termDiv></div>
         <div class="col fs-5 w-50 h-100 overflow-hidden" [innerHTML]="sanitizer.bypassSecurityTrustHtml(actualDefinition)" #definitionDiv></div>
