(front + api) add create folder page, change folder and set relation to be many to many

--- a/apps/front/src/app/header/header.component.html
+++ b/apps/front/src/app/header/header.component.html
@@ -69,12 +69,29 @@
                 "
                 [routerLink]="
                   this.cookieService.get('authenticated')
+                    ? 'create/folder'
+                    : undefined
+                "
+              ><fa-icon [icon]="faFolder"></fa-icon> &nbsp;Folder</a>
+            </li>
+            <li>
+              <a
+                class="dropdown-item"
+                [attr.data-bs-toggle]="isMobile ? 'collapse' : ''"
+                [attr.data-bs-target]="
+                  isMobile ? '#navbarSupportedContent' : ''
+                "
+                (click)="
+                  !this.cookieService.get('authenticated')
+                    ? (this.modalRef = loginModal.open())
+                    : ''
+                "
+                [routerLink]="
+                  this.cookieService.get('authenticated')
                     ? 'create/set'
                     : undefined
                 "
-                ><fa-icon [icon]="['far', 'clone']"></fa-icon> &nbsp;Study
-                set</a
-              >
+                ><fa-icon [icon]="faClone"></fa-icon> &nbsp;Study set</a>
             </li>
             <li>
               <a
