--- a/apps/front/src/app/create/create-folder/create-folder.component.html
+++ b/apps/front/src/app/create/create-folder/create-folder.component.html
@@ -1,1 +1,89 @@
-<p>create-folder works!</p>
+<form [formGroup]="createFolderForm" [hidden]="loading" (ngSubmit)="submit(createFolderForm)">
+  <div class="py-4 mx-md-5 mx-2">
+    <div class="d-flex justify-content-between text-nowrap">
+      <h2>
+        <fa-icon [icon]="faFolder"></fa-icon>
+        Create a new folder
+        <a href="/handbook/usage/creating-folders" target="_blank" class="text-decoration-none help-button"><fa-icon [icon]="faQuestionCircle" class="fs-5"></fa-icon></a>
+      </h2>
+      <button type="submit" class="btn btn-primary" [disabled]="submitted">
+        <span *ngIf="submitted" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+        Create
+      </button>
+    </div>
+    <div class="container-fluid p-0 mt-3">
+      <div class="row">
+        <div class="col">
+          <div class="my-3">
+            <input type="text" class="form-control" placeholder="Enter a title for your folder..." maxlength="255" formControlName="name" required>
+            <div
+              class="form-text text-danger"
+              *ngIf="
+              !createFolderForm.get('name')?.valid &&
+              !createFolderForm.disabled &&
+              (createFolderForm.get('name')?.dirty || createFolderForm.get('name')?.touched || submitted)"
+            >You must provide a title for your folder.</div>
+            <div
+              class="form-text text-danger"
+              *ngIf="
+              createFolderForm.errors?.['httpError']"
+            >Something went wrong. Try again.</div>
+          </div>
+          <div class="mb-3">
+            <textarea class="form-control" placeholder="Add a description..." formControlName="description"></textarea>
+          </div>
+          <div class="mb-3 d-flex align-items-center">
+            <input type="color" class="bg-white border-0 shadow-sm" id="colorPicker" formControlName="color">
+            <label for="colorPicker" class="ms-2 form-label pt-2">Select a color for the folder</label>
+          </div>
+          <div class="mb-2 form-check">
+            <input type="checkbox" class="form-check-input" id="privateCheck" formControlName="private">
+            <label class="form-check-label" for="privateCheck">Viewable only to me</label>
+          </div>
+        </div>
+      </div>
+      <hr>
+    </div>
+    <div>
+      <h3>Add sets to this folder</h3>
+      <p class="text-secondary">Select which sets should be inside this folder.</p>
+    </div>
+    <div class="row row-cols-1 row-cols-md-4 g-4 pb-4 pt-2" *ngIf="sets">
+      <div class="col-md-2 col-12" *ngFor="let set of sets; let i = index;">
+        <div
+          class="card shadow-sm" role="button"
+          (click)="toggleSetSelection(set.id)"
+        >
+          <div class="card-body d-flex justify-content-between align-items-center fs-5">
+            <div class="fw-semibold">
+              {{ set.title }}
+              <fa-icon
+                *ngIf="set.private"
+                [icon]="['far', 'eye-slash']"
+              ></fa-icon>
+            </div>
+            <input
+              class="form-check-input"
+              type="checkbox"
+              value=""
+              [disabled]="createFolderForm.disabled"
+              [checked]="isSetSelected(set.id)"
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="d-flex justify-content-end">
+      <button type="submit" class="btn btn-primary" [disabled]="submitted">
+        <span *ngIf="submitted" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+        Create
+      </button>
+    </div>
+  </div>
+</form>
+
+<div class="d-flex justify-content-center mt-5" #spinner>
+  <div class="loading-spinner spinner-border text-primary" role="status">
+    <span class="visually-hidden">Loading...</span>
+  </div>
+</div>
